--- a/css/style2.scss
+++ b/css/style2.scss
@@ -34,7 +34,7 @@
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1065px) {
   .top-section {
     margin-bottom: 50px;
   }
@@ -75,10 +75,6 @@
   padding-bottom: 35px;
 }
 
-// .add-marg {
-//   margin-bottom: 45px;
-// }
-
 .new-img {
   padding-bottom: 0;
 }
@@ -114,7 +110,7 @@
 }
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1065px) {
   .features-section {
     display: flex;
     justify-content: space-between;
@@ -169,7 +165,7 @@
   align-items: center;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1065px) {
   .center {
     margin: 0 auto;
   }
@@ -250,7 +246,7 @@
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1065px) {
   .questions {
     width: 38.5vw;
 
@@ -330,7 +326,7 @@ footer {
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1065px) {
   footer {
     h2 {
       font-size: 1.75em;
@@ -341,7 +337,7 @@ footer {
     span {
       margin-top: 35px;
     }
-    
+
     form {
       display: flex;
       width: 440px;
@@ -428,7 +424,7 @@ label.error {
 }
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1065px) {
   footer {
     .dark-blue-bg {
       flex-direction: row;
